@@ -1,13 +1,13 @@
 package com.web.akari.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.web.akari.dto.FichaTecnicaRequestDTO;
 import com.web.akari.dto.FichaTecnicaResponseDTO;
+import com.web.akari.exception.ResourceNotFoundException;
 import com.web.akari.dto.IngredienteResponseDTO;
 import com.web.akari.model.FichaTecnica;
 import com.web.akari.model.Ingrediente;
@@ -30,7 +30,8 @@ public class FichaTecnicaService {
         @Transactional // Usando a anotação do Spring
         public FichaTecnicaResponseDTO criar(FichaTecnicaRequestDTO dto) {
                 User user = userRepository.findById(dto.userId())
-                                .orElseThrow(() -> new RuntimeException("Usuário não encontrado."));
+                                .orElseThrow(() -> new ResourceNotFoundException(
+                                                "Usuário com ID " + dto.userId() + " não encontrado."));
 
                 FichaTecnica fichaTecnica = new FichaTecnica();
                 fichaTecnica.setNome(dto.nome());
@@ -41,7 +42,7 @@ public class FichaTecnicaService {
                 List<Ingrediente> ingredientes = dto.ingredientes().stream()
                                 .map(ingredienteDTO -> {
                                         Produto produto = produtoRepository.findById(ingredienteDTO.produtoId())
-                                                        .orElseThrow(() -> new RuntimeException(
+                                                        .orElseThrow(() -> new ResourceNotFoundException(
                                                                         "Produto com ID " + ingredienteDTO.produtoId()
                                                                                         + " não encontrado."));
                                         Ingrediente ingrediente = new Ingrediente();
@@ -50,7 +51,7 @@ public class FichaTecnicaService {
                                         ingrediente.setFichaTecnica(fichaTecnica); // Essencial para o relacionamento
                                                                                    // bidirecional
                                         return ingrediente;
-                                }).collect(Collectors.toList());
+                                }).toList();
 
                 fichaTecnica.setIngredientes(ingredientes);
                 FichaTecnica salva = fichaTecnicaRepository.save(fichaTecnica);
@@ -59,8 +60,8 @@ public class FichaTecnicaService {
 
         @Transactional(readOnly = true) // Boa prática para operações de leitura
         public List<FichaTecnicaResponseDTO> listarPorUsuario(Long userId) {
-                return fichaTecnicaRepository.findByUserId(userId).stream().map(this::converterParaResponseDTO)
-                                .collect(Collectors.toList());
+                return fichaTecnicaRepository.findByUserId(userId).stream()
+                                .map(this::converterParaResponseDTO).toList();
         }
 
         private FichaTecnicaResponseDTO converterParaResponseDTO(FichaTecnica fichaTecnica) {
@@ -69,7 +70,7 @@ public class FichaTecnicaService {
                                                 ing.getProduto().getNome(),
                                                 ing.getPercapita(), ing.getProduto().getMedida(),
                                                 ing.getProduto().getPreco()))
-                                .collect(Collectors.toList());
+                                .toList();
 
                 return new FichaTecnicaResponseDTO(fichaTecnica.getId(), fichaTecnica.getNome(),
                                 fichaTecnica.getModoDePreparo(), ingredientesDTO);
